fix doc, re-commit test class
Signed-off-by: Xin Li <xin@hashgraph.com>